kubernetes/apps/apps/headscale-ui/deployment-headplane.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name dashboard-homepage
  labels:
    app: *name
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: *name
    spec:
      containers:
        - image: goodieshq/headscale-admin:0.28
          name: *name
          ports:
          - containerPort: 80
            name: http
            protocol: TCP
          resources:
            requests:
              cpu: 1m
              memory: 1M
            limits:
              cpu: 500m
              memory: 250M
          env: []
          volumeMounts: []
      restartPolicy: Always
      volumes: []
status: {}
