kubernetes/apps/apps/headscale-ui/ingress-headscale-admin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app headscale-admin-cloud
  annotations: []
    # traefik.ingress.kubernetes.io/router.middlewares: network-oidc-auth@kubernetescrd
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host headscale.icylair.com
      http:
        paths:
          # - path: /admin
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: headscale-admin
          #       port:
          #         number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  number: 8080
  tls:
  - hosts:
      - headscale.icylair.com
    secretName: icylair-com-all-prod
